add: form criticable

--- a/app/views/critics/_form.html.erb
+++ b/app/views/critics/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: critic) do |form| %>
+<%= form_with(model: [criticable, critic]) do |form| %>
   <% if critic.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(critic.errors.count, "error") %> prohibited this critic from being saved:</h2>
@@ -23,12 +23,16 @@
 
   <div>
     <%= form.label :user_id, style: "display: block" %>
-    <%= form.text_field :user_id %>
+    <%# <%= form.text_field :user_id %>
+    <%= form.collection_select :user_id, User.order(:username), :id, :username %>
   </div>
 
   <div>
-    <%= form.label :criticable_id, style: "display: block" %>
-    <%= form.text_field :criticable_id %>
+    <%= form.text_field :criticable_id, hidden: true %>
+  </div>
+
+  <div>
+    <%= form.text_field :criticable_type, hidden: true %>
   </div>
 
   <div>
