--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,17 +1,10 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Games</h1>
-<%= link_to "New game", new_game_path %>
+<h1 class="mb-4">Games</h1>
+<%= link_to "New game", new_game_path, class: "button button--secondary button--sm fit-content mb-4" %>
 <div id="games">
   <% @games.each do |game| %>
     <%= render game %>
-    <p>
-      <strong>Summary:</strong>
-      <%= truncate(game.summary, length: 100) %>
-    </p>
-    <p>
-      <%= link_to "Show this game", game %>
-    </p>
   <% end %>
 </div>
 
