add: class labels

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,7 +1,6 @@
 <p style="color: green"><%= notice %></p>
   
 
-
 <%= render @game %>
 
 <div>
@@ -9,46 +8,33 @@
     <strong>Summary:</strong>
      <%= @game.summary %>
   </p>
+  </div>
+
+  <div>
     <strong>Genres:</strong>
-    <ul>
+    <div class="labels">
       <% @game.genres.each do |genre| %>
-      <li><%= genre.name%> | <%= link_to 'remove', remove_genre_game_path(@game, genre_id: genre.id), data: { turbo_method: :delete }  %></li>
+        <div class="label">
+          <%= genre.name%> | <%= link_to 'X', remove_genre_game_path(@game, genre_id: genre.id), data: { turbo_method: :delete }  %>
+        </div>
       <% end %>
-      <li>
-        <%= form_with(url: add_genre_game_path(@game), class: "flex flex-column gap-4 flex-row") do |form| %>
-          <div class="flex gap-4">
-            <div class="select">
-              <%= form.collection_select :genre_id, (Genre.all - @game.genres), :id, :name, { prompt: true }, { class: "select__input" } %>
-            </div>
-          </div>
-          <%= form.submit "Add genre", class: "button button--primary fit-content" %>
-        <% end %>
-      </li>
-    </ul>
+    </div>
   </div>
 
   <div>
     <strong>Platforms:</strong>
-    <ul>
+    <div class="labels">
       <% @game.platforms.each do |platform| %>
-      <li><%= platform.name%> | <%= link_to 'remove', remove_platform_game_path(@game, platform_id: platform.id), data: { turbo_method: :delete }  %></li>
+      <div class="label">
+        <%= platform.name%> | <%= link_to 'X', remove_platform_game_path(@game, platform_id: platform.id), data: { turbo_method: :delete }  %>
+      </div>
       <% end %>
-      <li>
-        <%= form_with(url: add_platform_game_path(@game), class: "flex flex-column gap-4 flex-row") do |form| %>
-          <div class="flex gap-4">
-            <div class="select">
-              <%= form.collection_select :platform_id, (Platform.all - @game.platforms), :id, :name, { prompt: true }, { class: "select__input" } %>
-            </div>
-          </div>
-          <%= form.submit "Add platform", class: "button button--primary fit-content" %>
-        <% end %>
-      </li>
-    </ul>
+    </div>
   </div>
 
   <div>
         <strong>Developers</strong>
-        <div class="labels_group">
+        <div class="labels">
           <% @game.involved_companies.where(developer: true).each do |ic| %>
             <div class="label">
               <%= ic.company.name %> | <%= link_to 'X', remove_developer_game_path(@game, company_id: ic.id), data: { turbo_method: :delete } %>
@@ -59,7 +45,7 @@
 
       <div>
         <strong>Publishers</strong>
-        <div class="labels_group">
+        <div class="labels">
           <% @game.involved_companies.where(publisher: true).each do |ic| %>
           <div class="label">
             <%= ic.company.name %> | <%= link_to 'X', remove_publisher_game_path(@game, company_id: ic.id), data: { turbo_method: :delete } %>
@@ -68,36 +54,59 @@
         </div>
   </div>
 
-  <div class="span_desing">
-        <%= form_with(url: add_developer_game_path(@game)) do |form| %>
-          <%= form.collection_select :company_id, (Company.all), :id, :name, { prompt: true }%>
-          <%= form.submit "ADD DEVELOPER"%>
-        <% end %>
+  <div>
+    <%= form_with(url: add_genre_game_path(@game), class: "flex gap-4 flex-row mb-4 mb-4") do |form| %>
+      <div class="flex gap-4">
+        <div class="select">
+          <%= form.collection_select :genre_id, (Genre.all - @game.genres), :id, :name, { prompt: true }, { class: "select__input" } %>
+        </div>
       </div>
+      <%= form.submit "ADD GENRE", class: "button button--primary fit-content" %>
+    <% end %>
+  </div>
+  <div>
+    <%= form_with(url: add_platform_game_path(@game), class: "flex gap-4 flex-row mb-4") do |form| %>
+      <div class="flex gap-4">
+        <div class="select">
+          <%= form.collection_select :platform_id, (Platform.all - @game.platforms), :id, :name, { prompt: true }, { class: "select__input" } %>
+        </div>
+      </div>
+      <%= form.submit "ADD PLATFORM", class: "button button--primary fit-content" %>
+    <% end %>
+  </div>
 
-  <div class="span_desing">
-    <%= form_with(url: add_publisher_game_path(@game)) do |form| %>
-      <%= form.collection_select :company_id, (Company.all), :id, :name, { prompt: true }%>
-      <%= form.submit "ADD PUBLISHER"%>
+
+  <div>
+        <%= form_with(url: add_developer_game_path(@game), class: "flex gap-4 flex-row mb-4") do |form| %>
+          <%= form.collection_select :company_id, (Company.all), :id, :name, { prompt: true }, { class: "select__input" } %>
+          <%= form.submit "ADD DEVELOPER", class: "button button--primary fit-content"%>
+        <% end %>
+  </div>
+  <div>
+    <%= form_with(url: add_publisher_game_path(@game), class: "flex gap-4 flex-row mb-4") do |form| %>
+      <%= form.collection_select :company_id, (Company.all), :id, :name, { prompt: true }, { class: "select__input" } %>
+      <%= form.submit "ADD PUBLISHER", class: "button button--primary fit-content"%>
     <% end %>
   </div>
 
   <div class="critics__tab-game">
-    <h1>Toogle Critics</h1>
-    <strong>Critics</strong>
+    <h3>critics</h3>
+    <%= render "critics/form", { critic: Critic.new, criticable: @game} %>
     <%@game.critics.each do |critic|%>
-      <%=critic.title%>
-      <%=critic.body%>
-      <%=critic.user.username%>
-    <%end%>
+      <div class="comment-card">
+        <div class="comment-card__details">
+          <hr>
+          <h4><%=critic.title%> </h4>
+          <span>by <%=critic.user.username%></span> <br>
+          <%=critic.body%>
+        </div>
+        <div class="critic-card__footer footer_card">
+          <span class="gray-300"><%='Sent '+time_ago_in_words(critic.created_at)+' ago'%></span>
+          <%=link_to image_tag('delete_icon.png'), critic, data: { turbo_method: :delete } %>
+        </div>
+      <%end%>
+    </div>
+    
+    <%= link_to "Back", games_path%>
   </div>
-
-  <h3>Feedbacks</h3>
-  <%= render "critics/form", { critic: Critic.new, criticable: @game} %>
-
-
-  <%= link_to "Edit this game", edit_game_path(@game) %> |
-  <%= link_to "Back to games", games_path %>
-
-  <%= button_to "Destroy this game", @game, method: :delete %>
 </div>
