--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,10 +16,19 @@
         <div class="header navbar shadow--gray">
           <%=link_to image_tag("logo.png"), games_path%>
         </div>
+        <% if user_signed_in? %>
+          Welcome <%= current_user.username %>
+          <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete } %>
+        <% else %>
+          <%= link_to "Sign in", new_user_session_path %>
+          <%= link_to "Sign up", new_user_registration_path %>
+        <%end%>
       </div>
     </header>
     <section class="section">
       <div class="container">
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
         <%= yield %>
       </div>
     </section>
