--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,14 +15,15 @@
       <div class="container">
         <div class="header navbar shadow--gray">
           <%=link_to image_tag("logo.png"), games_path%>
+        
+          <% if user_signed_in? %>
+            Welcome <%= current_user.username %>
+            <%= link_to "Edit profile", edit_user_registration_path%>
+            <%= link_to "Games", games_path %>
+            <%= link_to "Companies", companies_path %>
+            <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete } %>
+          <%end%>
         </div>
-        <% if user_signed_in? %>
-          Welcome <%= current_user.username %>
-          <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete } %>
-        <% else %>
-          <%= link_to "Sign in", new_user_session_path %>
-          <%= link_to "Sign up", new_user_registration_path %>
-        <%end%>
       </div>
     </header>
     <section class="section">
