--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,12 +1,8 @@
-<h1>Companies</h1>
+<h1 class="mb-4">Companies</h1>
+<%= link_to "New Company", new_company_path, class: "button button--secondary button--sm fit-content mb-4" %>
 
 <div id="companies">
   <% @companies.each do |company| %>
     <%= render company %>
-    <p>
-      <%= link_to "Show this company", company %>
-    </p>
   <% end %>
 </div>
-
-<%= link_to "New company", new_company_path %>
