edit button back with style

--- a/app/views/companies/_company.html.erb
+++ b/app/views/companies/_company.html.erb
@@ -9,7 +9,7 @@
 
       <div class="game-card__content">
         <div class="header_card">
-          <%= link_to company.name, company %>
+         <h4><%= link_to company.name, company %></h4>
         </div>
           <span>
             <%= company.start_date.strftime('%Y') %> -
