--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -5,6 +5,5 @@
 <br>
 
 <div>
-  <%= link_to "Show this company", @company %> |
-  <%= link_to "Back to companies", companies_path %>
+  <%= link_to "Back", companies_path, class: "button button--subtle" %>
 </div>
