--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -5,5 +5,5 @@
 <br>
 
 <div>
-  <%= link_to "Back to games", games_path %>
+  <%= link_to "Back", games_path, class: "button button--subtle" %>
 </div>
