--- a/app/assets/stylesheets/game.css
+++ b/app/assets/stylesheets/game.css
@@ -37,6 +37,10 @@
 }
 
 .rating {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
   background-color: var(--gray-200);
   width: 34px;
   height: 24px;
