--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -1,7 +1,17 @@
-<%= render @company %>
 <div>
-  
-  <p>        
+  <div class="show_top">
+    <div class="cover_game-100">
+      <%= image_tag @company.cover, alt:"company cover", style: "width: 300px; height: 337px; object-fit: contain;" %>
+    </div>
+  </div>
+  <h1><%=@company.name%></h1>
+  <span>
+    <%= @company.start_date.strftime('%Y') %> -
+    <%= @company.country %>
+  </span>
+  <div class="details__tab-game">
+    <h4>Company Details</h4>
+    <p><%=@company.description%></p>    
     <strong>Games (<%= @company.games_count %>) </strong>
     <%@company.games.each do |game| %>
       <div class="card-list">
@@ -42,7 +52,28 @@
       </div>
     </div>
     <%end%>
-  </p>
+  </div>
+
+  <div class="critics__tab-game mb-4">
+    <h3>critics</h3>
+    <%# <strong>Critics (<%= @company.critics_count ) </strong> %>
+    <%= render "critics/form", { critic: Critic.new, criticable: @company} %>
+    <%@company.critics.each do |critic|%>
+      <div class="comment-card">
+        <div class="comment-card__details">
+          <hr>
+          <h4><%=critic.title%> </h4>
+          <span>by <%=critic.user.username%></span> <br>
+          <%=critic.body%>
+        </div>
+        <div class="critic-card__footer footer_card">
+          <span class="gray-300"><%='Sent '+time_ago_in_words(critic.created_at)+' ago'%></span>
+          <%=link_to image_tag('delete_icon.png'), critic, data: { turbo_method: :delete } %>
+        </div>
+      <%end%>
+    </div>    
+  </div>
+
   <%= link_to "Back", companies_path, class: "button button--subtle" %>
 
 </div>
