change style to labels

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -12,7 +12,7 @@
     <div class="labels">
       <% @game.genres.each do |genre| %>
         <div class="label">
-          <%= genre.name%> | <%= link_to 'X', remove_genre_game_path(@game, genre_id: genre.id), data: { turbo_method: :delete }  %>
+          <%= genre.name%>  <%= link_to 'X', remove_genre_game_path(@game, genre_id: genre.id), data: { turbo_method: :delete }  %>
         </div>
       <% end %>
     </div>
@@ -23,7 +23,7 @@
     <div class="labels">
       <% @game.platforms.each do |platform| %>
       <div class="label">
-        <%= platform.name%> | <%= link_to 'X', remove_platform_game_path(@game, platform_id: platform.id), data: { turbo_method: :delete }  %>
+        <%= platform.name%>  <%= link_to 'X', remove_platform_game_path(@game, platform_id: platform.id), data: { turbo_method: :delete }  %>
       </div>
       <% end %>
     </div>
@@ -34,7 +34,7 @@
         <div class="labels">
           <% @game.involved_companies.where(developer: true).each do |ic| %>
             <div class="label">
-              <%= ic.company.name %> | <%= link_to 'X', remove_developer_game_path(@game, company_id: ic.id), data: { turbo_method: :delete } %>
+              <%= ic.company.name %>  <%= link_to 'X', remove_developer_game_path(@game, company_id: ic.id), data: { turbo_method: :delete } %>
             </div>
           <% end %>
         </div>
@@ -45,7 +45,7 @@
         <div class="labels">
           <% @game.involved_companies.where(publisher: true).each do |ic| %>
           <div class="label">
-            <%= ic.company.name %> | <%= link_to 'X', remove_publisher_game_path(@game, company_id: ic.id), data: { turbo_method: :delete } %>
+            <%= ic.company.name %>  <%= link_to 'X', remove_publisher_game_path(@game, company_id: ic.id), data: { turbo_method: :delete } %>
           </div>
           <% end %>
         </div>
@@ -88,6 +88,7 @@
 
   <div class="critics__tab-game mb-4">
     <h3>critics</h3>
+    <%# <strong>Critics (<%= @game.critics_count # ) </strong> %>
     <%= render "critics/form", { critic: Critic.new, criticable: @game} %>
     <%@game.critics.each do |critic|%>
       <div class="comment-card">
