--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,6 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
-    <%= javascript_import_module_tag "./bar_show" %>
   </head>
 
   <body>
@@ -18,21 +17,12 @@
           <%=link_to image_tag("logo.png"), games_path%>
         
           <% if user_signed_in? %>
-              <%= link_to image_tag("bar.png"), "#", onclick: "showMenu();" %>
-              <div class="navbar--links list-style-none">
-                Welcome <%= current_user.username %>
-                <%= link_to "Edit profile", edit_user_registration_path%>
-                <%= link_to "Games", games_path %>
-                <%= link_to "Companies", companies_path %>
-                <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete }, class: "button button--secondary button--sm fit-content mb-4" %>
-              </div>
+              Welcome <%= current_user.username %>
+              <%= link_to "Edit profile", edit_user_registration_path%>
+              <%= link_to "Games", games_path %>
+              <%= link_to "Companies", companies_path %>
+              <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete }, class: "button button--primary button--sm" %>
           <%end%>
-          <script>
-            var navBarMobile = document.querySelector(".navbar--links");
-            function showMenu() {
-              navBarMobile.classList.toggle("navbar-mobile--open");
-              }
-          </script>
         </div>
       </div>
     </header>
