add: pundit gem with roles admin regular

--- a/app/views/games/_game.html.erb
+++ b/app/views/games/_game.html.erb
@@ -28,8 +28,12 @@
           <strong>Critics</strong>
         </div>
         <div class="flex flex-row">
-          <%=link_to(image_tag('update_icon.png'), edit_game_path(game))%>
-          <%=link_to(image_tag('delete_icon.png'), game_path(game), data: { turbo_method: :delete, turbo_confirm: "Are you sure?"})%>
+          <% if policy(Game).update?%>
+            <%=link_to(image_tag('update_icon.png'), edit_game_path(game))%>
+          <%end%>
+          <% if policy(Game).destroy?%>
+            <%=link_to(image_tag('delete_icon.png'), game_path(game), data: { turbo_method: :delete, turbo_confirm: "Are you sure?"})%>
+          <%end%>
         </div>
       </div>
       
