--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,5 +1,7 @@
 <h1 class="mb-4">Games</h1>
-<%= link_to "New game", new_game_path, class: "button button--secondary button--sm fit-content mb-4" %>
+<% if policy(Game).new?%>
+  <%= link_to "New game", new_game_path, class: "button button--secondary button--sm fit-content mb-4" %>
+<%end%>
 <div id="games">
   <% @games.each do |game| %>
     <%= render game %>
