--- a/app/views/companies/_company.html.erb
+++ b/app/views/companies/_company.html.erb
@@ -25,8 +25,12 @@
               <strong>Games</strong>
             </div>
             <div class="flex flex-row">
-              <%=link_to(image_tag('update_icon.png'), edit_company_path(company))%>
-              <%=link_to(image_tag('delete_icon.png'), company_path(company), data: { turbo_method: :delete, turbo_confirm: "Are you sure?"})%>
+              <% if policy(Company).update?%>
+                <%=link_to(image_tag('update_icon.png'), edit_company_path(company))%>
+              <%end%>
+              <% if policy(Company).destroy?%>
+                <%=link_to(image_tag('delete_icon.png'), company_path(company), data: { turbo_method: :delete, turbo_confirm: "Are you sure?"})%>
+              <%end%>
             </div>
           </div>
       </div>
